<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tool:context=".fragments.ProfileFragment"
    >

  <LinearLayout
    android:id="@+id/layout_profile"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent"
    >
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/actionbar_profile"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@color/purple_500"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
  <androidx.cardview.widget.CardView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:id="@+id/profile_card"
      android:clickable="true"
      android:focusable="true"
      android:layout_marginEnd="15dp"
      android:layout_marginStart="15dp"
      android:layout_margin="15dp"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        >
      <ImageView
          android:id="@+id/image_profile"
          android:layout_width="match_parent"
          android:layout_height="200dp"
          tool:src="@drawable/petshop"
          />
      <TextView
          android:id="@+id/name_profile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tool:text="@string/first_name"
          android:textStyle="bold"
          android:textColor="@color/black"
          android:textSize="20sp"
          android:layout_marginTop="25dp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp" />
      <TextView
          android:id="@+id/phone_profile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tool:text="@string/phone"
          android:layout_marginTop="10dp"
          android:textSize="15sp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp" />
      <TextView
          android:id="@+id/address_profile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tool:text="@string/address"
          android:layout_marginTop="10dp"
          android:textSize="15sp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp" />
      <TextView
          android:id="@+id/email_profile"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          tool:text="@string/email"
          android:layout_marginTop="10dp"
          android:textSize="15sp"
          android:layout_marginStart="10dp"
          android:layout_marginLeft="10dp" />
      <Button
          android:id="@+id/change_image_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
        android:text="@string/change_image"/>
      <Button
        android:id="@+id/change_password_or_mail_button"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
        android:text="@string/change_password_or_mail"/>
      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:textAlignment="center"
          android:gravity="center_horizontal"
          android:text="@string/my_products"
          android:textStyle="bold"
          android:textSize="20sp"
          android:layout_marginTop="25dp"
          android:textColor="@color/black"
          />
      <androidx.recyclerview.widget.RecyclerView
          android:id="@+id/recyclerView_profile"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          />

    </LinearLayout>

  </androidx.cardview.widget.CardView>
    </ScrollView>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>